tests/fixtures/invalid/max_none_none.py
# Cannot call max() with None, None
x = max(None, None)
